Test against more lib versions